--- a/CSS/Z-index/style.css
+++ b/CSS/Z-index/style.css
@@ -6,7 +6,7 @@ body{
     /* font-size: 80%; */
 
     /* 1.4rem * 16px = 22.4px */
-    /* font-size: 1.4rem; */
+    font-size: 1.4rem; 
 }
 
 div{
