--- a/CSS/Grids/style.css
+++ b/CSS/Grids/style.css
@@ -1,14 +1,54 @@
+*{
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+}
+
 .container{
-    width: 100%;
-    background-color: lightblue;
+    height: 400px;
+    border: 2px solid red;
     display: grid;
-    grid-template-columns: repeat(4, 20%);
-    justify-item: content
+    gap: 10px;
+    grid-template-columns: 200px 200px 200px 200px;
+    /* grid-template-rows:200px 80px;
+    grid-auto-rows: 150px; */
+    /* justify-content: center; */
+    /* align-content: center; */
+    /* align-items: center; */
+    /* grid-template-areas: "hdr hdr hdr hdr"
+                          "sbr main main main"
+                          "sbr main main main"
+                          "ftr ftr ftr ftr"; */
+} 
+  
+  
+  .box{
+    border: 2px solid green;
+    padding: 12px;
   }
-  
-  
-  .item{
-    color: white;
+
+  #box-1{
     background-color: blue;
-    margin: 2px;
+    /* justify-self: center;
+    align-self: end; */
+    /* grid-column-start: 1;
+    grid-column-end: 3; */
+    /* grid-column: 1 / span 3; */
+    grid-row-start: 1;
+    grid-row-end: span 2;
+    /* grid-row: 1 / span 4;
+    grid-area: 1/1 /3/3; */
+    /* grid-area: hdr; */
   }
+/* 
+  #box-2{
+    grid-area: sbr;
+  }
+
+  #box-3{
+    grid-area: main;
+  }
+
+  #box-4{
+    grid-area: ftr;
+  } */
