--- a/CSS/Positions/style.css
+++ b/CSS/Positions/style.css
@@ -51,3 +51,50 @@ nav{
     padding: 30px;
     text-align: center;
 }
+
+body{
+    color: white;
+}
+
+.container{
+    width: 300px;
+    height: 600px;
+    background-color: gainsboro;
+    margin: 100px;
+}
+
+.box{
+    width: 100px;
+    height: 100px;
+}
+
+.red{
+    position: relative;
+    background-color: red;
+    top: 100px;
+    left: 100px;
+}
+
+.green{
+    position: absolute;
+    bottom: 0px;
+    right: 0px;
+    background-color: green;
+}
+
+.blue{
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    background-color: blue;
+}
+
+.purple{
+    position: sticky;
+    top: 50px;
+    background-color: purple;
+}
+
+.spacer{
+    height: 300vh;
+}
