--- a/Projects/Portfolio/CSS/style.css
+++ b/Projects/Portfolio/CSS/style.css
@@ -48,7 +48,7 @@ html{
     margin-top: 12rem;
     gap: 5.0rem;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
     font-size: 2.5rem;
     font-weight: 500;
@@ -59,7 +59,7 @@ html{
 /* left part of navbar  */
 .navbar .left {
     display: flex;
-    width: 30%;
+    width: 40%;
     justify-content: space-around;
     align-items: center;
 }
@@ -390,9 +390,15 @@ footer a {
 }
 
 /* Responsive Styling  */
-@media (min-width: 1201px) {
+@media (min-width: 2001px) {
     html {
-        font-size: 55%;
+        font-size: 85%;
+    }
+}
+
+@media (min-width: 1500px) and (max-width: 2000px) {
+    html {
+        font-size: 75%;
     }
 }
 
@@ -417,6 +423,47 @@ footer a {
 @media (max-width: 600px) {
 
     html {
+        font-size: 25%;
+    }
+
+    .header .name {
+        font-size: 8rem;
+        margin-right: 5rem;
+    }
+
+    .navbar {
+        margin-top: 13rem;
+    }
+
+    .container .greetings {
+        font-size: 3.2rem;
+    }
+
+    .container .intro {
+        flex-direction: column-reverse;
+    }
+
+    .intro .image {
+        width: 95%;
+        height: 150rem;
+        overflow: hidden;
+    }
+
+    .image img {
+        object-fit: cover;
+        border-radius: 10rem;
+        box-shadow: rgba(99, 99, 99, 0.2) 0rem 0.2rem 0.8rem 0rem;
+    }
+
+    .intro .introStart {
+        width: 95%;
+        font-size: 2.5rem;
+    }
+}
+
+@media (max-width: 389px) {
+
+    html {
         font-size: 20%;
     }
 
@@ -434,10 +481,12 @@ footer a {
 
     .intro .image {
         width: 95%;
-        height: 100rem ;
+        height: 130rem ;
+        overflow: hidden;
     }
 
     .image img {
+        object-fit: cover;
         border-radius: 10rem;
         box-shadow: rgba(99, 99, 99, 0.2) 0rem 0.2rem 0.8rem 0rem;
     }
@@ -448,7 +497,7 @@ footer a {
     }
 }
 
-@media (max-width: 374px) {
+@media (max-width: 319px) {
 
     html {
         font-size: 10%;
@@ -468,10 +517,11 @@ footer a {
 
     .intro .image {
         width: 95%;
-        height: 100rem ;
+        height: 150rem ;
     }
 
     .image img {
+        object-fit: fill;
         border-radius: 10rem;
         box-shadow: rgba(99, 99, 99, 0.2) 0rem 0.2rem 0.8rem 0rem;
     }
@@ -482,7 +532,13 @@ footer a {
     }
 }
 
-@media (max-width: 281px) {
+@media (max-width: 235px){
+    html {
+        font-size: 10%;
+    }
+}
+
+@media (max-width: 155px) {
 
     html {
         font-size: 7%;
@@ -515,37 +571,3 @@ footer a {
         font-size: 2.5rem;
     }
 }
-
-@media (max-width: 131px) {
-
-    html {
-        font-size: 5%;
-    }
-
-    .navbar {
-        margin-top: 13rem;
-    }
-
-    .container .greetings {
-        font-size: 3.2rem;
-    }
-
-    .container .intro {
-        flex-direction: column-reverse;
-    }
-
-    .intro .image {
-        width: 95%;
-        height: 100rem ;
-    }
-
-    .image img {
-        border-radius: 10rem;
-        box-shadow: rgba(99, 99, 99, 0.2) 0rem 0.2rem 0.8rem 0rem;
-    }
-
-    .intro .introStart {
-        width: 95%;
-        font-size: 2.5rem;
-    }
- }
