--- a/Projects/Portfolio/CSS/project.css
+++ b/Projects/Portfolio/CSS/project.css
@@ -12,7 +12,7 @@ html {
 header {
     width: 100%;
     height: 8rem;
-    background-color: #FFF5D6;
+    background-color: #FFFFFF;
     display: flex;
     justify-content: flex-end;
     align-items: center;
@@ -32,16 +32,20 @@ header .github {
 }
 
 /* Main section  */
+main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
 .section-content {
-    width: 95%;
+    width: 98%;
     border-radius: 2rem;
     border: 0.08rem solid black;
     margin-bottom: 2rem;
     font-size: 2rem;
     margin-top: 10rem;
-    margin-left: 2.5rem;
-    background-color: #FFFAEB;
+    background-color: #cee4fbaa;
     box-shadow: rgba(0, 0, 0, 0.19) 0rem 1rem 2rem, rgba(0, 0, 0, 0.23) 0rem 0.6rem 0.6rem;
 }
 
@@ -55,6 +59,7 @@ header .github {
    margin: 1.5rem;
    padding: 1rem;
    border: none;
+   background-color: #FFFF;
    box-shadow: rgba(33, 32, 32, 0.15) 0rem 0.5rem 1.5rem 0rem;
 }
 
@@ -74,12 +79,14 @@ header .github {
     font-size: 1.5rem;
 }
 
-.project-name span{
+.project-name span {
+    width: fit-content;
     border-radius:  1rem;
     font-weight: 600;
     padding: 1rem;
     margin-bottom: 1.5rem;
     font-size: 3rem;
+    background-color: #cee4fb87;
     box-shadow: rgba(0, 0, 0, 0.4) 0rem 0.2rem 0.4rem, rgba(0, 0, 0, 0.3) 0rem 0.7rem 1.3rem -0.3rem, rgba(0, 0, 0, 0.2) 0rem -0.3rem 0rem inset; 
 }
 
@@ -91,12 +98,11 @@ header .github {
 
 .project-name .bullet-points {
     align-self: self-start;
-    margin-left: 10rem;
+    margin-left: 5rem;
 }
 
 .bullet-points p {
     font-size: 2rem;
-    margin: 0.3rem;
 }
 
 
