--- a/Projects/Portfolio/CSS/skills.css
+++ b/Projects/Portfolio/CSS/skills.css
@@ -12,7 +12,7 @@ html {
 header {
     width: 100%;
     height: 8rem;
-    background-color:#FFF5D6;
+    background-color: #FFFFFF;
     display: flex;
     justify-content: flex-end;
     align-items: center;
@@ -28,40 +28,60 @@ header .heading {
 
 
 /* Main section  */
-.section-content {
+.skills {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
+    align-items: center;
+}
+
+.section-content {
+    width: 98%;
+    display: flex;
+    justify-content: center;
     align-items: center;
     flex-wrap: wrap;
     border-radius: 2rem;
     border: 0.08rem solid black;
-    margin-bottom: 2rem;
     font-size: 2rem;
-    margin: 10.5rem 2rem;
-    background-color: #FFFAEB;
+    gap: 1rem;
+    padding: 1rem;
+    margin-top: 10.5rem;
+    background-color: #cee4fbaa;
     box-shadow: rgba(0, 0, 0, 0.19) 0rem 1rem 2rem, rgba(0, 0, 0, 0.23) 0rem 0.6rem 0.6rem;
 }
 
 .section-content .tech {
-    border: 0.02rem solid black;
-    width: 30%;
-    height: 42rem;
-    margin: 1.5rem;
+    width: 98%;
+    height: fit-content;
+    margin: 1rem;
     border-radius: 1rem;
+    background-color: #FFFFFF;
     box-shadow: rgba(14, 30, 37, 0.12) 0rem 0.2rem 0.44rem 0rem, rgba(14, 30, 37, 0.32) 0rem 0.2rem 1.6rem 0rem;
 }
 
 .tech .techStackName {
   text-align: center;
-  font-size: 2.5rem;
+  font-size: 4rem;
   padding: 0.5rem;
+  background-color: #dceef9f7;
+  border-top-left-radius: 1rem;
+  border-top-right-radius: 1rem;
   box-shadow: rgba(0, 0, 0, 0.24) 0rem 0.3rem 0.8rem;
 }
 
-.tech ul li {
-    font-size: 1.5rem;
-    padding: 0.2rem;
-    margin-left: -1.5rem;
+.tech .bullet-points p::before {
+    content: "\2743"; /* Unicode value for bullet point */
+    color: black;
+    margin-right: 1rem;
+}
+
+.tech .bullet-points {
+    align-self: self-start;
+    margin-left: 2rem;
+}
+
+.bullet-points p {
+    font-size: 2rem;
 }
 
 /* Responsive Design Styling  */
@@ -86,37 +106,19 @@ header .heading {
 
 @media (min-width: 900px) and (max-width: 1100px) {
    html {
-    font-size: 42%;
+    font-size: 45%;
    }
-
-   .section-content .tech {
-      height: 40rem; 
-    }
-
-    .tech ul li {
-        margin-left: -3.5rem;
-    }
 }
 
 @media (min-width: 768px) and (max-width: 899px) {
     html {
         font-size: 45%;
     }
-
-    .section-content .tech {
-        width: 45%;
-        height: 40rem;
-    }
 }
 
 @media (min-width: 601px) and (max-width: 767px) {
     html {
         font-size: 40%;
-    }
-
-    .section-content .tech {
-        width: 45%;
-        height: 41rem;
     }
 }
 
@@ -125,15 +127,6 @@ header .heading {
     html {
         font-size: 30%;
     }
-
-    .section-content .tech {
-        width: 45%;
-        height: 42rem;
-    }
-
-    .tech ul li {
-        margin-left: -5rem;
-    }
 }
 
  @media (max-width: 449px) {
@@ -141,50 +134,17 @@ header .heading {
     html {
         font-size: 35%;
     }
-
-    .section-content .tech {
-        width: 100%;
-        height: 40rem;
-        margin: 1rem;
-        border: none;
-    }
-
-    .tech ul li {
-        margin-left: -5rem;
-    }
 }
 
 @media (max-width: 384px) {
     html {
         font-size: 25%;
     }
-
-    .section-content .tech {
-        width: 100%;
-        height: 34rem;
-        margin: 1rem;
-        border: none;
-    }
-
-    .tech ul li {
-        margin-left: -5rem;
-    }
 }
 
 @media (max-width: 319px) {
     html {
         font-size: 20%;
-    }
-
-    .section-content .tech {
-        width: 100%;
-        height: 28rem;
-        margin: 1rem;
-        border: none;
-    }
-
-    .tech ul li {
-        margin-left: -5rem;
     }
 }
 
