--- a/Projects/Airbnb Clone/styles.css
+++ b/Projects/Airbnb Clone/styles.css
@@ -27,38 +27,36 @@ header img {
     width: 50%;
     display: flex;
     border-radius: 3rem;
+    gap: 0.2rem;
     background-color: #fff;
-    border: 1px solid gray;
-    padding: 0.01rem;
+    border: 1px solid red;
 }
 
-#search-input {
+.search-input {
     padding: 1rem;
     font-size: 1rem;
     margin-left: 0;
+    border-radius: 3rem;
+    outline: none;
 }
 
-.left {
-    width: 50%;
-    border-top-left-radius: 3rem;
-    border-bottom-left-radius: 3rem;
+#destination {
+    width: 40%;
 }
 
-.check-in {
-    width: 17%;
+#check-in {
+    width: 20%;
 }
 
-.check-out {
-    width: 17%;
+#check-out {
+    width: 20%;
 }
 
-.right {
-    width: 16%;
-    border-top-right-radius: 3rem;
-    border-bottom-right-radius: 3rem;
+#adults {
+    width: 20%;
 }
 
-#search-input:hover {
+.search-input:hover {
     background-color: rgba(220, 220, 220, 0.546);
     border-radius: 3rem;
     border-right: 1px solid #fff;
@@ -81,4 +79,91 @@ header img {
 .home-image img{
     width: 90%;
     margin: 2rem;
+}
+
+#hotelLists {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin: 1rem;
+    margin-top: 2rem;
+    
+}
+
+#hotels {
+    width: 50%;
+    height: 100vh;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 1rem;
+    overflow: scroll;
+    color:  #374151;
+    background-color:  #FFFFFF;
+}
+
+#listings-container {
+    width: 100%;
+    height: fit-content;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 2rem 1rem 0.5rem 1rem;
+    border-top:  1px solid #E5E7EB;
+    border-bottom:  1px solid #E5E7EB;
+}
+
+#listings-container img {
+    width: 35%;
+    height: 20vh;
+    border-radius: 1rem;
+}
+
+#listings-container .listing-info {
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    gap: 1.5rem;
+}
+
+.listing-info .name {
+    display: flex;
+    flex-direction: column;
+    gap: 0.2rem;
+}
+
+.listing-info .name > p {
+    font-size: 0.8rem;
+}
+
+.room-info {
+    color: #6B7280;
+}
+
+#listings-container .priceNdRatings {
+    display: flex;
+    justify-content: flex-start;
+    gap: 0.5rem;
+}
+
+.priceNdRatings  p.price {
+    width: 60%;
+    text-align: right;
+}
+
+#map {
+    width: 50%;
+    height: 100vh;
+}
+
+#listings-container button {
+    width: fit-content;
+    margin: 1rem;
+    padding: 0.7rem;
+    font-size: 1rem;
+    border-radius: 1rem;
+    color: black;
+    background-color: rgba(255, 0, 0, 0.417);
 }
